--- a/css/app.css
+++ b/css/app.css
@@ -22,6 +22,7 @@ body {
 }
 
 .container {
+
     display: flex;
     justify-content: center;
     align-items: center;
@@ -31,6 +32,40 @@ body {
 h1 {
     font-family: 'Open Sans', sans-serif;
     font-weight: 300;
+}
+
+@media screen and (max-width: 400px) {
+    body {
+    width: 100%;
+    max-height: 50%;
+    }
+    .container{
+       transform: scale(0.4);
+    
+    }
+    h1
+    {
+        font-size: 12vw;
+    }
+    .score-panel {  
+
+    font-size: 8vw;
+}
+
+}
+@media screen and (min-width: 401px) and (max-width: 750px){
+    .container
+     {
+    transform: scale(0.6);
+    }
+    h1
+    {
+        font-size: 13vw;
+    }
+    .score-panel
+     {  
+    font-size: 3.5vw;
+    }
 }
 
 /*
